--- a/layout/_partial/post/toc.ejs
+++ b/layout/_partial/post/toc.ejs
@@ -7,7 +7,7 @@
     %>
     <aside class="post-widget">
         <nav class="post-toc-wrap" id="post-toc">
-            <h4>TOC</h4>
+            <h4>本文要点</h4>
             <%- toc(post.content, {
                 class: 'post-toc',
                 list_number: theme.toc.list_number
