--- a/layout/_partial/menu.ejs
+++ b/layout/_partial/menu.ejs
@@ -10,7 +10,9 @@
             <img src="<%- url_for(theme.avatar) %>">
           </a>
           <h5 class="nickname"><%- config.author %></h5>
+	  
           <h5 class="description"><%- config.description %></h5>
+          <div style="margin-top: 5px; font-size: 92%"><b><%- site.posts.length %> 篇文章，共 <%- totalcount(site) %> 字</b></div>	  
             <%
               for (var i in theme.socail) {
                 link = theme.socail[i];
