--- a/layout/_partial/post.ejs
+++ b/layout/_partial/post.ejs
@@ -1,13 +1,19 @@
-<%- partial('post/toc', { post: post }) %>
+<%- partial('post/toc', { post: post}) %>
 <article id="<%= post.layout %>-<%= post.slug %>"
   class="post-article article-type-<%= post.layout %> fade" itemprop="blogPost">
 
     <div class="post-card">
         <h1 class="post-card-title"><%- post.title %></h1>
         <div class="post-meta">
-            <%- partial('post/date', { date_format: config.date_format }) %>
+            <%- partial('post/date', {date_format: config.date_format}) %>
             <%- partial('post/category') %>
             <%- partial('plugins/page-visit') %>
+            <span style="color: dodgerblue">
+                字数：<span style="font-size: 14px;"> <%- wordcount(post.content) %></span>
+            </span>
+            <span>
+                阅读预计<span style="font-size: 14px; color: orange;">  <%= min2read(post.content) * 2.5 %>  </span> 分钟
+            </span>
         </div>
         <div class="post-content" id="post-content" itemprop="postContent">
             <%- post.content %>
@@ -20,6 +26,7 @@
             <%- partial('post/tag') %>
 
             <%- partial('post/share-fab') %>
+
         </div>
     </div>
 
