--- a/layout/archive.ejs
+++ b/layout/archive.ejs
@@ -15,6 +15,23 @@
 
     <%
         var y = 0, m = 0;
+    var t = [0];
+    sortPosts.forEach(function(post, i) {
+        var ny = post.date.year();
+        var nm = post.date.month();
+        if (ny !== y || nm !== m) {
+            y = ny;
+            m = nm;
+            t.push(i);
+        }
+    });
+    %>
+
+    <%
+    y = 0, m = 0;
+    var d = 0;
+    t.shift();
+    t.push(site.posts.length);
         sortPosts.forEach(function(post, i) {
             var dt = post.date;
             var ny = post.date.year();
@@ -26,7 +43,7 @@
                 m = nm;
     %>
             <% if (i > 0) { %></div> <% } %>
-            <h3 class="archive-separator"><%=dt.format('MMMM, YYYY')%></h3>
+            <h3 class="archive-separator" style="color: #f65"><%=dt.format('YYYY 年 MM 月')%>（共发表<%- t[d+1] - (t[d++] || 0) %> 篇）</h3>
             <div class="waterfall">
     <%    } %>
 
