add some change

--- a/layout/page.ejs
+++ b/layout/page.ejs
@@ -15,6 +15,20 @@
             }) %>
         </div>
 
+        <% if(theme.about){ %>
+        <div class="card page-about-me flex-row">
+            <a href="/" class="avatar waves-effect waves-circle waves-light"><%- image_tag(theme.avatar) %></a>
+            <div class="content flex-col">
+                <p><strong><%- config.author %></strong></p>
+                <p><em><%- config.subtitle %></em></p>
+                <p><%- theme.about %></p>
+            </div>
+
+            <%- partial('_partial/post/share-fab') %>
+
+        </div>
+        <% } %>
+
         <%- partial('_partial/post/reward-btn') %>
 
         <%- partial('_partial/post/comment', { post: page }) %>
