--- a/layout/_partial/post/copyright.ejs
+++ b/layout/_partial/post/copyright.ejs
@@ -1,10 +1,12 @@
 <blockquote class="post-copyright">
+    <% if(theme.postMessage || theme.show_last_updated) { %>
     <div class="content">
         <%- partial('updated') %>
         <% if (theme.postMessage) { %>
         <p><%- _.template(theme.postMessage)(locals) %></p>
         <% } %>
     </div>
+    <% } %>
     <footer>
         <a href="<%- config.url %>">
             <img src="<%- url_for(theme.avatar) %>" alt="<%- config.author %>">
