--- a/source/css/_partial/article.less
+++ b/source/css/_partial/article.less
@@ -95,6 +95,15 @@
   }
 }
 
+.post-toc-shrink {
+    height: 0;
+    overflow-y: hidden;
+}
+
+.post-toc-expand {
+    height: auto;
+}
+
 .post-article {
   .post-content {
     padding-top: 20px;
