update gotop button background

--- a/source/css/_partial/gotop.less
+++ b/source/css/_partial/gotop.less
@@ -8,7 +8,7 @@
   line-height: 56px;
   text-align: center;
   color: #fff;
-  background: @accentColor;
+  background: #388E8E;
   border-radius: 50%;
   opacity: 0;
   .boxShadow();
