--- a/layout/_partial/header.ejs
+++ b/layout/_partial/header.ejs
@@ -1,7 +1,7 @@
 <header class="top-header" id="header">
     <div class="flex-row">
         <a href="javascript:;" class="header-icon waves-effect waves-circle waves-light on" id="menu-toggle">
-          <i class="icon icon-lg icon-navicon" aria-hidden="true"></i>
+          <i class="icon icon-lg icon-indent" aria-hidden="true"></i>
         </a>
         <div class="flex-col header-title ellipsis"><%= title %></div>
         <% if (theme.search) { %>
