--- a/layout/_partial/post/copyright.ejs
+++ b/layout/_partial/post/copyright.ejs
@@ -2,9 +2,9 @@
 <% if (page.hide_license !== true && theme.license || page.license) { %>
         <blockquote style="margin: 2em 0 0;padding: 0.5em 1em;border-left: 3px solid #F44336;background-color: #F5F5F5;list-style: none;">
             <p>
-	            <b>±¾ÎÄ±êÌâ£º</b> <%- page.title %><br>
-	            <b>×îºó¸üÐÂ£º</b><%= date(page.updated, 'YYYY Äê MM ÔÂ DD ÈÕ - HH:MM') %><br>
-	            <b>±¾ÎÄÁ´½Ó£º</b><a href="<%= page.permalink %>"><%= page.permalink %></a><br>
+	            <b>æœ¬æ–‡æ ‡é¢˜ï¼š</b> <%- page.title %><br>
+	            <b>æœ€åŽæ›´æ–°ï¼š</b><%= date(page.updated, 'YYYY å¹´ MM æœˆ DD æ—¥ - HH:MM') %><br>
+	            <b>æœ¬æ–‡é“¾æŽ¥ï¼š</b><a href="<%= page.permalink %>"><%= page.permalink %></a><br>
 	                <% if (page.license) { %>
 	                    <%- page.license %>
 	                <% } else { %> 
