--- a/layout/_partial/menu.ejs
+++ b/layout/_partial/menu.ejs
@@ -26,59 +26,81 @@
         </header>
       </div>
     </div>
-    <div class="scroll-wrap flex-col">
-      <ul class="nav">
+<div class="content">
         <%
           var menuLink1, menuLink2, menuLink3, menuLink4, menuLink5, isActive = function(link) {
               var pageLink = url_for(page.path)
               return link === '/' ? pageLink === url_for(link + 'index.html') : _.startsWith(pageLink, url_for(link))
           };
           
-            menuLink1 = theme.menu['home'];
+	    menuLink1 = theme.menu['home'];
 	    menuLink2 = theme.menu['th-list'];
 	    menuLink3 = theme.menu['archives'];
 	    menuLink4 = theme.menu['tags'];
 	    menuLink5 = theme.menu['user'];
           %>
-	  <li class="waves-block waves-effect<% if(isActive(menuLink1)){ %> active<% } %>">
-              <a href="<%- url_for(menuLink1) %>">
-                <i class="icon icon-lg icon-<%= 'home' %>" aria-hidden="true"></i>
-                <%=(__('menu.' + 'home') || _.startCase('home')) %>
-              </a>
-            </li>
-	  <li class="waves-block waves-effect<% if(isActive(menuLink2)){ %> active<% } %>">
-		<a href="<%- url_for(menuLink2) %>">
-			<i class="icon icon-lg icon-<%= 'th-list' %>" aria-hidden="true"></i>
-			<%=(__('menu.' + 'th-list') || _.startCase('th-list')) %>
-		</a>
-		<ul style="display: block;list-style:none;padding-left:0px;">
-			<li>
-			<%- list_categories({
-				show_count: false,
-				style: 'none',
-				separator: '</li><li>'
-			}) %>
-		</ul>				
-	  </li>
-	  <li class="waves-block waves-effect<% if(isActive(menuLink3)){ %> active<% } %>">
-              <a href="<%- url_for(menuLink3) %>">
-                <i class="icon icon-lg icon-<%= 'archives' %>" aria-hidden="true"></i>
-                <%=(__('menu.' + 'archives') || _.startCase('archives')) %>
-              </a>
-            </li>
-            <li class="waves-block waves-effect<% if(isActive(menuLink4)){ %> active<% } %>">
-              <a href="<%- url_for(menuLink4) %>">
-                <i class="icon icon-lg icon-<%= 'tags' %>" aria-hidden="true"></i>
-                <%=(__('menu.' + 'tags') || _.startCase('tags')) %>
-              </a>
-            </li>
-            <li class="waves-block waves-effect<% if(isActive(menuLink5)){ %> active<% } %>">
-              <a href="<%- url_for(menuLink5) %>">
-                <i class="icon icon-lg icon-<%= 'user' %>" aria-hidden="true"></i>
-                <%=(__('menu.' + 'user') || _.startCase('user')) %>
-              </a>
-            </li>        
-      </ul>
-    </div>
+	<div id="jquery-accordion-menu" class="jquery-accordion-menu white">
+		<ul id="demo-list">	 
+		   <li class="active"><a href="<%- url_for(menuLink1) %>"><i class="fa fa-home" aria-hidden="true"></i><%=(__('menu.' + 'home') || _.startCase('home')) %></a></li>
+			<li><a href="<%- url_for(menuLink2) %>"><i class="fa fa-list-alt" aria-hidden="true"></i><%=(__('menu.' + 'th-list') || _.startCase('th-list')) %></a>
+				<ul class="submenu">
+					<li>
+					<%- list_categories({
+						show_count: false,
+						style: 'none',
+						separator: '</li><li>'
+					}) %>
+				</ul>
+			</li>
+			<li><a href="<%- url_for(menuLink3) %>"><i class="fa fa-archive" aria-hidden="true"></i><%=(__('menu.' + 'archives') || _.startCase('archives')) %></a></li>			
+			<li><a href="<%- url_for(menuLink4) %>"><i class="fa fa-tags" aria-hidden="true"></i><%=(__('menu.' + 'tags') || _.startCase('tags')) %></a></li>
+			<li><a href="<%- url_for(menuLink5) %>"><i class="fa fa-user" aria-hidden="true"></i></i><%=(__('menu.' + 'user') || _.startCase('user')) %></a></li>
+		</ul>
+		<div class="jquery-accordion-menu-footer">
+			文章总数：<%- site.posts.length %>
+		</div>
+	</div>
+</div>
+
+<script type="text/javascript">
+(function($) {
+$.expr[":"].Contains = function(a, i, m) {
+	return (a.textContent || a.innerText || "").toUpperCase().indexOf(m[3].toUpperCase()) >= 0;
+};
+function filterList(header, list) {
+	//@header 头部元素
+	//@list 无需列表
+	//创建一个搜素表单
+	var form = $("<form>").attr({
+		"class":"filterform",
+		action:"#"
+	}), input = $("<input>").attr({
+		"class":"filterinput",
+		type:"text"
+	});
+	$(form).append(input).appendTo(header);
+	$(input).change(function() {
+		var filter = $(this).val();
+		if (filter) {
+			$matches = $(list).find("a:Contains(" + filter + ")").parent();
+			$("li", list).not($matches).slideUp();
+			$matches.slideDown();
+		} else {
+			$(list).find("li").slideDown();
+		}
+		return false;
+	}).keyup(function() {
+		$(this).change();
+	});
+}
+$(function() {
+	filterList($("#form"), $("#demo-list"));
+});
+})(jQuery);	
+</script>
+
+<script type="text/javascript">
+	jQuery("#jquery-accordion-menu").jqueryAccordionMenu();
+</script>
   </div>
 </aside>
